--- a/helm/cm-aws-ebs-csi-driver/Chart.yaml
+++ b/helm/cm-aws-ebs-csi-driver/Chart.yaml
@@ -6,4 +6,4 @@ version: 0.0.0
 dependencies:
 - name: aws-ebs-csi-driver
   version: 2.12.1
-  repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver/index.yaml
+  repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
